--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,81 +1,89 @@
-name: E2E
+name: Advanced CI/CD Pipeline
 
 on:
   push:
     branches:
       - 'CI-branch-test'
 
-env:
-  TAR_PATH: heighliner.tar
-
 jobs:
-  build-docker:
+  build-and-test:
     runs-on: ubuntu-latest
-    steps:
-      - name: Get branch name
-        id: branch-name
-        uses: tj-actions/branch-names@v7
-
-      - name: Build Docker image
-        uses: strangelove-ventures/heighliner-build-action@v0.0.3
-        with:
-          registry: # empty registry, image only shared for e2e testing
-          tag: local # emulate local environment for consistency in interchaintest cases
-          tar-export-path: ${{ env.TAR_PATH }} # export a tarball that can be uploaded as an artifact for the e2e jobs
-          platform: linux/amd64 # test runner architecture only
-          git-ref: ${{ steps.branch-name.outputs.current_branch }}
-
-          # Heighliner chains.yaml config
-          chain: persistence
-          dockerfile: cosmos
-          build-target: make install
-          binaries: |
-            - /go/bin/persistenceCore
-          build-env: |
-            - LEDGER_ENABLED=false
-            - BUILD_TAGS=muslc
-
-      # Use github actions artifacts for temporary storage of the docker image tarball
-      - name: Publish Tarball as Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: persistence-docker-image
-          path: ${{ env.TAR_PATH }}
-
-  e2e-tests:
-    needs: build-docker
-    runs-on: ubuntu-latest
-    strategy:
-        matrix:
-            # names of `make` commands to run tests
-            test:
-              - "ictest-pob"
-              - "ictest-upgrade"
-              - "ictest-ibc"
-              - "ictest-ibchooks"
-              - "ictest-pfm"
-              - "ictest-lsm"
-              - "ictest-liquidstake"
-        fail-fast: false
 
     steps:
-      # Load the docker image tarball from github actions artifacts and run tests (one runner per test due to matrix)
-      - name: Download Tarball Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: persistence-docker-image
-
-      - name: Load Docker Image
-        run: docker image load -i ${{ env.TAR_PATH }}
-      
-      - name: Setup Go with cache
-        uses: magnetikonline/action-golang-cache@v4
-        with:
-          go-version: 1.20.0
-        id: go
-
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: run test
-        run: make ${{ matrix.test }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Set up QEMU
+        if: startsWith(matrix.os, 'ubuntu-')
+        uses: docker/setup-qemu-action@v1
+
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: '1.21.5'
+
+      - name: Build Local Docker Image
+        run: make local-image
+        env:
+          LEDGER_ENABLED: 'false'
+          BUILD_TAGS: 'muslc,netgo,ledger'
+
+      - name: Run Integration Tests
+        run: make ictest-all
+
+      - name: Archive Production Artifacts
+        if: success()
+        uses: actions/upload-artifact@v3
+        with:
+          name: production-artifacts
+          path: |
+            ./bin/*
+            ./build/*
+
+      - name: Setup Go with cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
+      - name: Install Dependencies
+        run: |
+          go mod tidy
+          go mod download
+
+      - name: Run Go Unit Tests
+        run: go test ./... -v -cover
+
+      - name: Publish Docker Image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./docker/pstake/Dockerfile
+          push: true
+          tags: user/app:latest
+          build-args: |
+            LEDGER_ENABLED=false
+            BUILD_TAGS=muslc,netgo,ledger
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
+
+      - name: Move Cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
