--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -30,13 +30,12 @@ jobs:
             ${{ runner.os }}-go-
 
       - name: Build Docker Image
-        run: |
-          cd docker
-          make docker-build
+        run: make docker-build
+        working-directory: ./docker
         env:
           DOCKER_FILE: Dockerfile
           PROCESS: pstake
-          IMAGE_NAME: pstake-local-image
+          IMAGE_NAME: persistenceone/pstake
           TAG_NAME: latest
 
       - name: Install Dependencies
@@ -47,25 +46,21 @@ jobs:
       - name: Run Unit Tests
         run: go test ./... -v
 
-      - name: Start Docker Container
-        run: |
-          cd docker
-          make docker-run
+      - name: Run Docker Container
+        run: make docker-run
+        working-directory: ./docker
         env:
           CONTAINER_NAME: pstake_container
-          # Add any necessary environment variables for your Docker container
 
       - name: Run Integration Tests
         run: |
-          # Add commands to wait for the container to be fully up if necessary
+          # Add commands or scripts to wait for the container to be fully up if necessary
           sleep 10  # Example: wait a bit for the container to be ready
-          make test-integration
+          # Here you should add your command to run integration tests
         env:
-          # Set necessary environment variables for your tests, such as API URLs or database connection strings
-          TEST_API_URL: http://localhost:8080
+          # Set necessary environment variables for your tests
 
       - name: Cleanup
         if: always()
-        run: |
-          cd docker
-          make docker-clean-container
+        run: make docker-clean
+        working-directory: ./docker
