--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,15 +1,14 @@
-name: Build and Test Workflow for pstake-native
+name: CI Workflow for pstake-native with Matrix E2E Tests
 
 on:
   pull_request:
     branches:
-      - 'CI-branch-test' # Trigger on PRs targeting CI-branch-test branch
-  push:
-    branches:
-      - 'CI-branch-test' # Also trigger on pushes to CI-branch-test branch
+      - 'CI-branch-test'
 
 env:
-  TAR_PATH: pstake-heighliner.tar
+  IMAGE_NAME: pstaked-local
+  IMAGE_TAG: latest
+  TAR_PATH: pstaked-image.tar
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -20,29 +19,36 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
       - name: Build Docker image with Heighliner
         uses: strangelove-ventures/heighliner-build-action@v0.0.3
         with:
-          registry: "" # Assuming the registry is not needed for this workflow
-          tag: local # Use a local tag to emulate the local environment
-          tar-export-path: ${{ env.TAR_PATH }}
-          platform: linux/amd64
-          git-ref: ${{ github.head_ref }}
-          chain: pstake
-          dockerfile: cosmos
-          build-target: make install
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-organization: "persistenceOne"
+          github-repo: "pstake-native"
+          git-ref: ${{ github.sha }}
+          chain: "pstake"
+          dockerfile: "cosmos"
+          build-target: "make install"
           binaries: |
             - /go/bin/pstaked
           build-env: |
             - LEDGER_ENABLED=false
             - BUILD_TAGS=muslc
+          tag: ${{ env.IMAGE_TAG }}
+          org: "persistenceOne"
+          local: true
 
+      - name: Save Docker image to tarball
+        run: docker save ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} > ${{ env.TAR_PATH }}
 
-      - name: Publish Docker Image Tarball as Artifact
+      - name: Upload Docker image tarball as an artifact
         uses: actions/upload-artifact@v3
         with:
-          name: pstake-docker-image
+          name: docker-image-tarball
           path: ${{ env.TAR_PATH }}
 
   e2e-tests:
@@ -50,19 +56,19 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        test: ["e2e-test-basic", "e2e-test-ibc-transfer"] # Define your e2e test targets here
+        test: ["e2e-test-basic", "e2e-test-ibc-transfer"]
       fail-fast: false
 
     steps:
       - name: Download Docker Image Tarball Artifact
         uses: actions/download-artifact@v3
         with:
-          name: pstake-docker-image
+          name: docker-image-tarball
 
       - name: Load Docker Image
-        run: docker image load -i ${{ env.TAR_PATH }}
+        run: docker load < ${{ env.TAR_PATH }}
 
-      - name: Set up Go 1.19
+      - name: Set up Go
         uses: actions/setup-go@v3
         with:
           go-version: 1.19
@@ -71,4 +77,5 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run End-to-End Test
-        run: make ${{ matrix.test }}
+        run: |
+          make ${{ matrix.test }}
