--- a/chains.yaml
+++ b/chains.yaml
@@ -6,5 +6,5 @@
   binaries:
     - /go/bin/pstaked
   build-env:
-    LEDGER_ENABLED: "false"
-    BUILD_TAGS: "muslc"
+    - LEDGER_ENABLED: "false"
+    - BUILD_TAGS: "muslc"
