--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -31,19 +31,19 @@ jobs:
         uses: strangelove-ventures/heighliner-build-action@v0.0.3
         with:
           # github-token: ${{ secrets.GITHUB_TOKEN }}
-          # github-organization: "persistenceOne"
+          github-organization: "persistenceOne"
           github-repo: "pstake-native-test"
-          git-ref: ${{ github.sha }}
+          #git-ref: ${{ github.sha }}
           chain: "pstake"
           dockerfile: "docker/pstake/Dockerfile" 
-          build-target: "make build" 
+          build-target: make install
           binaries: |
             - /go/bin/pstaked
-          # build-env: |
-          #   LEDGER_ENABLED=false
-          #   BUILD_TAGS=muslc
+          build-env: |
+            LEDGER_ENABLED=false
+            BUILD_TAGS=muslc
           tag: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-          org: "persistenceOne"
+          #org: "persistenceOne"
           # local: true
 
       - name: Save Docker image to tarball
