--- a/chains.yaml
+++ b/chains.yaml
@@ -1,4 +1,6 @@
----
+# This file is used to create docker images using the heighliner binary.
+# see: https://github.com/strangelove-ventures/heighliner
+
 - name: pstake
   github-organization: persistenceOne
   github-repo: pstake-native
@@ -7,5 +9,5 @@
   binaries:
     - /go/bin/pstaked
   build-env:
-    LEDGER_ENABLED: "false"
-    BUILD_TAGS: muslc
+    - LEDGER_ENABLED=false
+    - BUILD_TAGS=muslc
