--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,80 +1,34 @@
-name: CI Workflow for pstake-native with Matrix E2E Tests
+name: CI Workflow for Docker Debugging
 
 on:
-  pull_request:
-    branches:
-      - 'CI-branch-test'
   push:
     branches:
       - 'CI-branch-test'
 
-env:
-  IMAGE_NAME: pstaked-local
-  IMAGE_TAG: latest
-  TAR_PATH: pstaked-image.tar
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
-  build-docker:
+  docker-debug:
     runs-on: ubuntu-latest
     services:
       docker:
         image: docker:19.03.12-dind
         options: --privileged
         ports:
-          - 2375
+          - 2375:2375
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
-      - name: Set DOCKER_HOST
-        run: echo "DOCKER_HOST=tcp://docker:2375" >> $GITHUB_ENV
-
-      - name: Wait for Docker to start
-        run: until docker info; do echo Waiting for Docker...; sleep 5; done
-
-      - name: Login to Docker
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: Generate Local Image
+      - name: Set up Docker Client
         run: |
-          docker build -t ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} .
-          docker images
+          sudo mkdir -p /etc/docker
+          echo '{"debug": true, "hosts": ["tcp://127.0.0.1:2375", "unix:///var/run/docker.sock"]}' | sudo tee /etc/docker/daemon.json
+          sudo service docker restart
 
-      - name: Save Docker image to tarball
-        run: docker save ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} > ${{ env.TAR_PATH }}
-
-      - name: Upload Docker image tarball as an artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: docker-image-tarball
-          path: ${{ env.TAR_PATH }}
-
-  e2e-tests:
-    needs: build-docker
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download Docker Image Tarball Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: docker-image-tarball
-
-      - name: Load Docker Image
-        run: docker load < ${{ env.TAR_PATH }}
-
-      - name: Set up Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.19
-
-      - name: Checkout pstake-native chain code
-        uses: actions/checkout@v3
-
-      - name: Run End-to-End Test
+      - name: Verify Docker Client Configuration
         run: |
-          echo "Running E2E tests for ${{ matrix.test }}"
-          # Replace the following line with your actual test command
-          # Example: make ${{ matrix.test }}
+          docker version
+          docker info
+
+      - name: Build and Run a Simple Docker Image
+        run: |
+          docker run hello-world
