--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -39,8 +39,9 @@ jobs:
           binaries: |
             - /go/bin/pstaked
           build-env: |
-            LEDGER_ENABLED=false
-            BUILD_TAGS=muslc
+            - "LEDGER_ENABLED=false"
+            - "BUILD_TAGS=muslc"
+
           tag: local # emulate local environment for consistency in interchaintest cases
           tar-export-path: ${{ env.TAR_PATH }} # export a tarball that can be uploaded as an artifact for the e2e jobs
           platform: linux/amd64 # test runner architecture only
