--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -28,23 +28,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Build Docker image with Heighliner
-        uses: strangelove-ventures/heighliner-build-action@v0.0.3
-        with:
-          github-repo: "pstake-native-test"
-          git-ref: ${{ steps.branch-name.outputs.current_branch }}
-          chain: "pstake"
-          dockerfile: "cosmos"
-          build-target: make install
-          binaries: |
-            - /go/bin/pstaked
-          build-env: |
-            - "LEDGER_ENABLED=false"
-            - "BUILD_TAGS=muslc"
-
-          tag: local # emulate local environment for consistency in interchaintest cases
-          tar-export-path: ${{ env.TAR_PATH }} # export a tarball that can be uploaded as an artifact for the e2e jobs
-          platform: linux/amd64 # test runner architecture only
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} -f cosmos/Dockerfile .
+      
+      - name: Save Docker image to tarball
+        run: |
+          docker save ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} > ${{ env.TAR_PATH }}
 
       - name: Publish Tarball as Artifact
         uses: actions/upload-artifact@v4
@@ -53,9 +43,9 @@ jobs:
           path: ${{ env.TAR_PATH }}
 
       - name: Setup Go with cache
-        uses: magnetikonline/action-golang-cache@v4
+        uses: actions/setup-go@v3
         with:
-          go-version: "1.21.5"
+          go-version: 1.21.5
 
       - name: Download dependencies for interchaintest
         run: |
@@ -78,15 +68,19 @@ jobs:
           name: pstake-docker-image
 
       - name: Load Docker Image
-        run: docker image load -i ${{ env.TAR_PATH }}
+        run: |
+          docker image load -i pstaked-image.tar
 
       - name: Setup Go with cache
-        uses: magnetikonline/action-golang-cache@v4
+        uses: actions/setup-go@v3
         with:
-          go-version: "1.21.5"
+          go-version: 1.21.5
 
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Run test
-        run: make ${{ matrix.test }}
+        run: |
+          export IMAGE_NAME=${{ env.IMAGE_NAME }}
+          export IMAGE_TAG=${{ env.IMAGE_TAG }}
+          make ${{ matrix.test }}
