--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -28,13 +28,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Build Docker image
-        run: |
-          docker build -t ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} -f cosmos/Dockerfile .
-      
-      - name: Save Docker image to tarball
-        run: |
-          docker save ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} > ${{ env.TAR_PATH }}
+      - name: Build Docker image with Heighliner
+        uses: strangelove-ventures/heighliner-build-action@v0.0.3
+        with:
+          github-repo: "pstake-native-test"
+          git-ref: ${{ steps.branch-name.outputs.current_branch }}
+          chain: "pstake"
+          dockerfile: "cosmos"
+          build-target: make install
+          binaries: |
+            - /go/bin/pstaked
+          build-env: |
+            - "LEDGER_ENABLED=false"
+            - "BUILD_TAGS=muslc"
+          tag: local 
+          tar-export-path: ${{ env.TAR_PATH }} 
+          platform: linux/amd64 
 
       - name: Publish Tarball as Artifact
         uses: actions/upload-artifact@v4
@@ -43,9 +52,9 @@ jobs:
           path: ${{ env.TAR_PATH }}
 
       - name: Setup Go with cache
-        uses: actions/setup-go@v3
+        uses: magnetikonline/action-golang-cache@v4
         with:
-          go-version: 1.21.5
+          go-version: "1.21.5"
 
       - name: Download dependencies for interchaintest
         run: |
@@ -67,20 +76,22 @@ jobs:
         with:
           name: pstake-docker-image
 
+      - name: Verify Tarball Presence
+        run: |
+          ls -lah ${{ env.TAR_PATH }}
+
       - name: Load Docker Image
         run: |
-          docker image load -i pstaked-image.tar
+          docker image load -i ${{ env.TAR_PATH }}
+          docker images # List images to verify
 
       - name: Setup Go with cache
-        uses: actions/setup-go@v3
+        uses: magnetikonline/action-golang-cache@v4
         with:
-          go-version: 1.21.5
+          go-version: "1.21.5"
 
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Run test
-        run: |
-          export IMAGE_NAME=${{ env.IMAGE_NAME }}
-          export IMAGE_TAG=${{ env.IMAGE_TAG }}
-          make ${{ matrix.test }}
+        run: make ${{ matrix.test }}
